# tinyserver

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
benchmarks/: README.md  scenarios.json
benchmarks/prompts/: burst.txt  deterministic.txt  long.txt  short.txt
kernels/: top_p_sampling.py
scripts/: __init__.py  bench.py  bench_paged_attention.py  bench_stream.py  benchmark_sampling.py
scripts/bench/: __main__.py  cli.py  execution.py  metrics.py  models.py  output.py  planning.py  runners.py  scenarios.py
server/: main.py  utils.py
server/api/: collector.py  pump.py  routes.py  schema.py  v1.py
server/executor/: engine.py  events.py  executor.py  scheduler.py  sinks.py  types.py  worker.py
server/metrics/: logging.py  timers.py
server/model/: batch_ops.py  block_manager.py  determinism.py  hf_backend.py  hf_runner.py  inference_context.py  patcher.py  prefill_helpers.py  sampling.py  triton_sampling.py  types.py  utils.py
tests/api/: test_collector.py  test_pump.py  test_routes.py  test_v1.py  test_v1_legacy.py
tests/executor/: test_batch_executor.py  test_batch_worker.py  test_engine.py  test_events.py  test_executor.py  test_schedule_engine.py  test_scheduler.py  test_sinks.py  test_worker.py  worker_helpers.py
tests/model/: conftest.py  paged_helpers.py  test_batch_ops.py  test_batch_sampling.py  test_block_manager.py  test_hf_runner.py  test_hf_runner_behavior.py  test_hf_runner_smoke.py  test_kv_cache_kernels.py  test_paged_attention_kernel.py  test_paged_attention_validation.py  test_sampling.py  utils.py
(+12 files in other folders)
