[project]
name = "inference-server"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.0",
  "torch",
  "transformers>=4.40",
  "accelerate",  # optional but helpful
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.uvicorn]
factory = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "smoke: end-to-end tests using a real randomly-initialized model (slower)",
]
