[project]
name = "inference-server"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.31",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.0",
  "torch",
  "transformers>=4.51",
  "accelerate",  # optional but helpful
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pre-commit>=3.0.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
]

[tool.uvicorn]
factory = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "smoke: end-to-end tests using a real randomly-initialized model (slower)",
    "slow: tests requiring model download from HuggingFace Hub",
]

[tool.ruff.lint]
extend-select = ["I"]
